makko/wg-easy/wg-easy/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: wg-easy
  labels:
    app: wg-easy
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: wg-easy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      securityContext:
        sysctls:
        - name: "net.ipv4.conf.all.src_valid_mark"
          value: "1"
        - name: "net.ipv4.ip_forward"
          value: "1"
      nodeSelector:
        kubernetes.io/hostname: talos-yha-nr5
      containers:
      - image: ghcr.io/wg-easy/wg-easy
        name: wg-easy
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        volumeMounts:
        - name: assets
          mountPath: /etc/wireguard
        ports:
        - containerPort: 51820
          protocol: UDP
        - containerPort: 51821
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 64Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 16Mi
      volumes:
      - name: assets
        persistentVolumeClaim:
          claimName: wg-easy-pvc
          readOnly: false
