makko/wg-easy/wg-easy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
spec:
  selector:
    app: wg-easy
  ports:
  - protocol: TCP
    name: "tcp51821"
    port: 51821
    targetPort: 51821
    nodePort: 31821
  - protocol: UDP
    name: "udp51820"
    port: 51820
    targetPort: 51820
    nodePort: 31820
  type: NodePort
