makko/wg-easy/wg-easy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wg-easy
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "wireguard.senk0.com"
  rules:
    - backendRefs:
        - name: wg-easy
          port: 51821
